<resources>
    <string name="app_name">CATSystem</string>
    <string name="username_phone_hint">请输入用户名/电话号码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="rpwd_hint">请再次输入密码</string>
    <string name="phone_hint">请输入电话号码</string>
    <string name="username_hint">请输入用户名</string>
    <string name="code_hint">请输入验证码</string>
    <string name="login_title">用户登录</string>
    <string name="register_title">用户注册</string>
    <string name="get_code">获得验证码</string>
    <string name="already_agree">已阅读并同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="blank"></string>
    <string name="test">测试</string>
    <string name="my">我的</string>
    <string name="error_sets">错题集</string>
    <string name="study_data">学习数据</string>
    <string name="about_us">关于我们</string>
    <string name="test_situation">答题情况</string>
    <string name="contact">联系我们</string>
    <string name="start_test">开始</string>
    <string name="start_test_top">开始测试</string>
    <string name="choose_subject">选择科目</string>
    <string name="answer_question">回答问题</string>
    <string name="answer_result">测试结果</string>
    <string name="answer_correct">回答正确</string>
    <string name="my_answer">我的答案为:</string>
    <string name="correct_answer">正确答案为:</string>
    <string name="submit">提交</string>
    <string name="test_data">做题情况</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    科目名字-->
    <string name="subject1">计算机组成原理</string>
    <string name="subject2">马克思主义原理</string>

<!--    错误信息提示-->
    <string name="null_phone">电话号码不能为空!</string>
    <string name="phone_length">电话号码长度为11位!</string>
    <string name="busy_hint">操作繁忙,请稍等!</string>
    <string name="network_error">网络未连接!</string>
    <string name="login_fail">登录失败</string>
    <string name="login_sucess">登录成功</string>
    <string name="register_fail">注册失败</string>
    <string name="register_sucess">注册成功</string>
    <string name="has_quesion_no_select">请完成给定所有题目!</string>
    <string name="repeat_rpwd_error">两次密码不一致</string>
    <string name="pwd_length_error">密码长度在8-15个字符之间</string>
    <string name="name_length_error">用户名不能少于5个字符</string>
    <string name="name_null_warning">用户名不能为空</string>
    <string name="pwd_null_warning">密码不能为空</string>
    <string name="phone_has_register">该电话号码已被注册</string>
    <string name="vertify_code_error">验证码错误</string>
    <string name="determine_agreement">请勾选用户协议</string>

    <!-- smssdk隐私协议弹框 -->
    <string name="smsdemo_authorize_dialog_title">服务授权</string>
    <string name="smsdemo_authorize_dialog_content">欢迎您使用MobTech提供的演示DEMO，SMSSDK为开发者提供完全免费的短信验证码服务，顶级通道3秒下发，适用于登录注册、找回密码、支付认证等场景。我们将依据MobTech的《隐私政策》来帮助你了解我们需要收集哪些数据。请您详细查看我们的隐私政策，详见</string>
    <string name="smsdemo_authorize_dialog_reject">拒绝</string>
    <string name="smsdemo_authorize_dialog_accept">同意</string>
</resources>