<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.activity.RegisterActivity">
    <RelativeLayout
        android:background="@color/deepskyblue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_top_bar_height">
        <TextView
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_20"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/back"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/ic_web_back"
            android:layout_width="@dimen/register_back_icon"
            android:layout_height="@dimen/register_back_icon"/>
    </RelativeLayout>
    <LinearLayout
        android:paddingLeft="@dimen/radius_10"
        android:paddingRight="@dimen/radius_10"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:hint="@string/phone_hint"
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <ImageView
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:id="@+id/clear_phone"
                android:src="@mipmap/clear"
                android:layout_width="@dimen/login_input_box_icon"
                android:layout_height="@dimen/login_input_box_icon"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:hint="@string/username_hint"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <ImageView
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:id="@+id/clear_username"
                android:src="@mipmap/clear"
                android:layout_width="@dimen/login_input_box_icon"
                android:layout_height="@dimen/login_input_box_icon"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:visibility="invisible"
                    android:id="@+id/clear_pwd"
                    android:src="@mipmap/clear"
                    android:layout_width="@dimen/login_input_box_icon"
                    android:layout_height="@dimen/login_input_box_icon"/>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:hint="@string/rpwd_hint"
                android:inputType="textPassword"
                android:id="@+id/rpwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:visibility="invisible"
                    android:id="@+id/clear_rpwd"
                    android:src="@mipmap/clear"
                    android:layout_width="@dimen/login_input_box_icon"
                    android:layout_height="@dimen/login_input_box_icon"/>
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:layout_weight="3"
                android:hint="@string/code_hint"
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="60dp"/>
            <Button
                android:id="@+id/get_code"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:textColor="@color/white"
                android:background="@drawable/get_code_btn"
                android:text="@string/get_code"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:textColor="@color/white"
            android:background="@drawable/login_btn"
            android:id="@+id/register_btn"
            android:text="注册"
            android:textSize="@dimen/font_18"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="@dimen/register_checkbox_size"
                android:layout_height="@dimen/register_checkbox_size"/>
            <TextView
                android:textSize="@dimen/font_15"
                android:text="@string/already_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/user_agreement"
                android:textColor="@color/deepskyblue"
                android:textSize="@dimen/font_15"
                android:text="@string/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>