<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".views.activity.LoginActivity">
    <LinearLayout
        android:gravity="center"
        android:background="@color/deepskyblue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_top_bar_height">
        <TextView
            android:textSize="@dimen/font_20"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/radius_10"
        android:paddingRight="@dimen/radius_10"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:hint="@string/username_phone_hint"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <ImageView
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:id="@+id/clear_username"
                android:src="@mipmap/clear"
                android:layout_width="@dimen/login_input_box_icon"
                android:layout_height="@dimen/login_input_box_icon"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_marginRight="@dimen/margin_5"
                    android:id="@+id/open_eye"
                    android:background="@drawable/password_eye"
                    android:layout_width="@dimen/login_input_box_icon"
                    android:layout_height="@dimen/login_input_box_icon"
                    android:visibility="invisible"
                    android:button="@null"/>
                <ImageView
                    android:visibility="invisible"
                    android:id="@+id/clear_pwd"
                    android:src="@mipmap/clear"
                    android:layout_width="@dimen/login_input_box_icon"
                    android:layout_height="@dimen/login_input_box_icon"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:textColor="@color/white"
            android:background="@drawable/login_btn"
            android:id="@+id/login_btn"
            android:text="登录"
            android:textSize="@dimen/font_18"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_5"
            android:id="@+id/register_txt"
            android:text="注册"
            android:textColor="@color/lightslategray"
            android:textSize="@dimen/font_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginRight="@dimen/margin_5"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/margin_5"
            android:id="@+id/forget_txt"
            android:text="忘记密码"
            android:textColor="@color/lightslategray"
            android:textSize="@dimen/font_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>