<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".views.fragment.MyFragment">
    <RelativeLayout
        android:paddingRight="@dimen/margin_10"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:src="@mipmap/setting"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:id="@+id/setting"
            android:layout_width="@dimen/my_setting_size"
            android:layout_height="@dimen/my_setting_size"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <com.example.catsystem.ui.RoundImage
                    android:id="@+id/header"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_width="@dimen/my_header_size"
                    android:layout_height="@dimen/my_header_size"/>
                <LinearLayout
                    android:layout_marginLeft="@dimen/margin_20"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="@dimen/my_username_size"
                        android:text="李佐磊"
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:text="学生"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/margin_10"
                        android:background="@color/skyblue"
                        android:layout_width="@dimen/my_label_width"
                        android:layout_height="@dimen/my_label_height"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:paddingRight="@dimen/margin_40"
                android:paddingLeft="@dimen/margin_40"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/test_situation"
                    android:textColor="@color/white"
                    android:text="@string/test_situation"
                    android:background="@drawable/my_tag"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/my_tag_height"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"/>
                <Button
                    android:id="@+id/contact"
                    android:textColor="@color/white"
                    android:text="@string/contact"
                    android:background="@drawable/my_tag"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/my_tag_height"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        app:cardCornerRadius="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_10"
                android:id="@+id/error_problem"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_choice_height">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/error_problem"
                        android:layout_width="@dimen/my_choice_icon_size"
                        android:layout_height="@dimen/my_choice_icon_size"/>
                    <TextView
                        android:layout_marginLeft="@dimen/margin_10"
                        android:textColor="@color/black"
                        android:textSize="@dimen/my_choice_text_size"
                        android:text="@string/error_sets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/right"
                    android:layout_width="@dimen/my_choice_right_icon_size"
                    android:layout_height="@dimen/my_choice_right_icon_size"/>
                <View
                    android:layout_alignParentBottom="true"
                    android:background="@color/skyblue"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_10"
                android:id="@+id/study_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_choice_height">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/sduty_data"
                        android:layout_width="@dimen/my_choice_icon_size"
                        android:layout_height="@dimen/my_choice_icon_size"/>
                    <TextView
                        android:layout_marginLeft="@dimen/margin_10"
                        android:textColor="@color/black"
                        android:textSize="@dimen/my_choice_text_size"
                        android:text="@string/study_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/right"
                    android:layout_width="@dimen/my_choice_right_icon_size"
                    android:layout_height="@dimen/my_choice_right_icon_size"/>
                <View
                    android:layout_alignParentBottom="true"
                    android:background="@color/skyblue"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_10"
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_choice_height">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/about"
                        android:layout_width="@dimen/my_choice_icon_size"
                        android:layout_height="@dimen/my_choice_icon_size"/>
                    <TextView
                        android:layout_marginLeft="@dimen/margin_10"
                        android:textColor="@color/black"
                        android:textSize="@dimen/my_choice_text_size"
                        android:text="@string/about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/right"
                    android:layout_width="@dimen/my_choice_right_icon_size"
                    android:layout_height="@dimen/my_choice_right_icon_size"/>
                <View
                    android:layout_alignParentBottom="true"
                    android:background="@color/skyblue"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>